Fix SEO indexing issues for sendlead.co
- Add robots.txt with proper directives
- Install and configure next-sitemap for dynamic sitemap generation
- Update layout.tsx with canonical URLs and proper metadata base
- Configure Vercel redirects for domain consistency (sendlead.co -> www.sendlead.co)
- Fix sitemap to use correct domain (www.sendlead.co instead of sendlead.co.uk)
- Add proper robots meta tags for search engine indexing
- Update package.json with postbuild script for sitemap generation

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,29 @@
   "buildCommand": "pnpm run build",
   "outputDirectory": ".next",
   "installCommand": "pnpm install",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "sendlead.co"
+        }
+      ],
+      "destination": "https://www.sendlead.co/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "http://sendlead.co"
+        }
+      ],
+      "destination": "https://www.sendlead.co/:path*",
+      "permanent": true
+    }
+  ]
 }
