feat: update get started flow to use Make.com webhook
- Updated quiz funnel to use environment variable for webhook URL
- Added proper error handling and logging for webhook requests
- Configured webhook to send structured lead data on form completion
- Added NEXT_PUBLIC_MAKE_WEBHOOK environment variable support

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Slack Webhook URL for bootcamp form notifications
 # Get this from your Slack workspace: Apps > Incoming Webhooks
 NEXT_PUBLIC_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# EmailJS Configuration for email notifications
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id_here
