--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
+    "resend": "^6.4.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1"
   },
