Add Kit sequence support for lead email automation

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ NEXT_PUBLIC_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
 
 # EmailJS Configuration for email notifications
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id_here
+
+# Kit (formerly ConvertKit) Configuration
+KIT_API_KEY=your_kit_api_key_here
+KIT_SEQUENCE_ID=2487293
+# KIT_FORM_ID=your_form_id_here
+# KIT_TAG_ID=your_tag_id_here
